--- a/index.html
+++ b/index.html
@@ -41,17 +41,20 @@
                 </button>
                 <div class="collapse navbar-collapse text-nowrap  justify-content-end" id="collapsibleNavbar">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#header">ACCUEIL</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
+                        <li class="nav-item"><a class="nav-link" href="#header">HOME</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#skills">COMPETENCES</a>
+                        <li class="nav-item"><a class="nav-link" href="#apropos">ABOUT</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="#skills">SKILLS</a>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="#experience">EXPERIENCES</a>
                         </li>
+                        <li class="nav-item"><a class="nav-link" href="#Testimonial">TESTIMONIALS</a>
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a>
-
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -479,6 +482,76 @@
                 </div>
             </div>
         </section> <!-- End experiences Section -->
+         <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials section-bg">
+        <div class="container">
+  
+          <div class="section-title" data-aos="fade-in" data-aos-delay="100">
+            <h2>Testimonials</h2>
+            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          </div>
+  
+          <div class="owl-carousel testimonials-carousel">
+  
+            <div class="testimonial-item" data-aos="fade-up">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="public/images/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+              <h3>Saul Goodman</h3>
+              <h4>Ceo &amp; Founder</h4>
+            </div>
+  
+            <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+              <h3>Sara Wilsson</h3>
+              <h4>Designer</h4>
+            </div>
+  
+            <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+              <h3>Jena Karlis</h3>
+              <h4>Store Owner</h4>
+            </div>
+  
+            <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
+              <h3>Matt Brandon</h3>
+              <h4>Freelancer</h4>
+            </div>
+  
+            <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
+              <h3>John Larson</h3>
+              <h4>Entrepreneur</h4>
+            </div>
+  
+          </div>
+  
+        </div>
+      </section><!-- End Testimonials Section -->
         <!-- ======= contact Section ======= -->
         <section class="section" id="contact">
             <div class="cc-contact-information" style="background-image: url('public/images/staticmap.png')">
