--- a/index.html
+++ b/index.html
@@ -305,99 +305,99 @@
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                             <div class="portfolio-wrap">
-                                <img src="public/images/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-links">
                                     <a href="public/images/portfolio/portfolio-1.jpg" data-gall="portfolioGallery"
                                         class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                             <div class="portfolio-wrap">
-                                <img src="public/images/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-links">
                                     <a href="public/images/portfolio/portfolio-2.jpg" data-gall="portfolioGallery"
                                         class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                             <div class="portfolio-wrap">
-                                <img src="public/images/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-links">
                                     <a href="public/images/portfolio/portfolio-3.jpg" data-gall="portfolioGallery"
                                         class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                             <div class="portfolio-wrap">
-                                <img src="public/images/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-links">
                                     <a href="public/images/portfolio/portfolio-4.jpg" data-gall="portfolioGallery"
                                         class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                             <div class="portfolio-wrap">
-                                <img src="public/images/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-links">
                                     <a href="public/images/portfolio/portfolio-5.jpg" data-gall="portfolioGallery"
                                         class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                             <div class="portfolio-wrap">
-                                <img src="public/images/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-links">
                                     <a href="public/images/portfolio/portfolio-6.jpg" data-gall="portfolioGallery"
                                         class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                             <div class="portfolio-wrap">
-                                <img src="public/images/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-links">
                                     <a href="public/images/portfolio/portfolio-7.jpg" data-gall="portfolioGallery"
                                         class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                             <div class="portfolio-wrap">
-                                <img src="public/images/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-links">
                                     <a href="public/images/portfolio/portfolio-8.jpg" data-gall="portfolioGallery"
                                         class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                             <div class="portfolio-wrap">
-                                <img src="public/images/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+                                <img classe="portfolio-details-carousel" src="public/images/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
                                 <div class="portfolio-links">
                                     <a href="public/images/portfolio/portfolio-9.jpg" data-gall="portfolioGallery"
                                         class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                                    <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                                    <a href="#" title="More Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
                         </div>
