--- a/index.html
+++ b/index.html
@@ -131,9 +131,12 @@
         </div>
         <div class="section mt-3" data-aos="fade-up" id="apropos">
             <div class="container">
-                <div class="card" data-aos="fade-up" data-aos-offset="8">
-                    <div class="row">
-                        <div class="col-lg-6 col-md-12">
+                <div class="row flex-row align-items-center justify-content-center card " data-aos="fade-up" data-aos-offset="8">
+                    <div class=" col-lg-6 col-md-6 col-sm-12">
+                        <img src="public/images/about.png" alt="about me" /> 
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="">
                             <div class="card-body">
                                 <div class="h4 mt-0 title">About</div>
                                 <p>Hello! I am Anthony Barnett. Web Developer, Graphic Designer and Photographer.
@@ -145,7 +148,7 @@
                                         More</a></p>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-12">
+                        <div class="">
                             <div class="card-body">
                                 <div class="h4 mt-0 title">Basic Information</div>
                                 <div class="row">
