--- a/index.html
+++ b/index.html
@@ -33,34 +33,37 @@
 <body>
     <!-- ---------------------------------------Navbar------------------------------------------------ -->
     <header class="section" id="header">
-        <nav class="navbar navbar-expand-md fixed-top">
-            <div class="container">
-                <a class="logo text-nowrap" href="#header">
-                    <!-- votre logo ou nom de votre entreprise . vous ne mettez rien ici  -->
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                    <span class="navbar-toggler-icon text-secondary"></span>
-                </button>
-                <div class="collapse navbar-collapse text-nowrap  justify-content-end" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#header">HOME</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="#apropos">ABOUT</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="#skills">SKILLS</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="#experiences">EXPERIENCES</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="#testimonials">TESTIMONIALS</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a>
-                        </li>
-                    </ul>
+        <div class="container">
+            <nav class="navbar navbar-expand-md fixed-top">
+                <div class="container">
+                    <a class="logo text-nowrap" href="#header">
+                        <!-- votre logo ou nom de votre entreprise . vous ne mettez rien ici  -->
+                    </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#collapsibleNavbar">
+                        <span class="navbar-toggler-icon text-secondary"></span>
+                    </button>
+                    <div class="collapse navbar-collapse text-nowrap  justify-content-end" id="collapsibleNavbar">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link" href="#header">HOME</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#apropos">ABOUT</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#skills">SKILLS</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#experiences">EXPERIENCES</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#testimonials">TESTIMONIALS</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </div>
     </header>
     <!-- ---------------------------------------profile------------------------------------------------ -->
     <div class="content">
